[tool.poetry]
name = "practic_selenium"
version = "0.1.0"
description = "My practic"
authors = ["RipHelp"]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
attrdict = "^2.0.1"
allure-pytest = "^2.13.5"
selenium = "^4.23.1"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
webdriver-manager = "^4.0.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/RipHelp/practice_selenium/issues"
